@@ -24,7 +24,7 @@ siteTag   = ALC
 
 debugMode = True
 ftpDaemon = glftpd
-modules   = free groups readlogs
+modules   = free groups help readlogs
 varFiles  = core.vars glftpd.vars pzs-ng.vars
 themeFile = default-gl.theme
 
@@ -70,7 +70,7 @@ version  = 2.01
 !delban   = +flags=o -all
 
 # Help module.
-!help     = +target=notice
+!*help    = +target=notice
 
 #### Sections
 #
