@@ -24,7 +24,7 @@ siteTag   = ALC
 
 debugMode = True
 ftpDaemon = ioftpd
-modules   = free groups nxtools readlogs
+modules   = free groups help nxtools readlogs
 varFiles  = core.vars ioftpd.vars iozs.vars nxautonuke.vars nxtools.vars
 themeFile = default-io.theme
 
@@ -64,7 +64,16 @@ msgWindow = ioFTPD::MessageWindow
 !delban   = +flags=o -all
 
 # Help module.
-!help     = +target=notice
+!*help    = +target=notice
+
+# nxTools module.
+!*dupe    = +target=notice
+!*search  = +target=notice
+!*latest  = +target=notice
+!*new     = +target=notice
+!*nukes   = +target=notice
+!*unnukes = +target=notice
+!*undupe  = +flags=o -all
 
 #### Sections
 #
