@@ -33,3 +33,9 @@ affilsFoot  = groupCount:n sectionCount:n
 bannedHead  =
 bannedBody  = groups:z section:z
 bannedFoot  = groupCount:n sectionCount:n
+
+# Module: help
+helpHead    =
+helpType    = type:z
+helpBody    = arguments:z command:z description:z
+helpFoot    =
