@@ -30,7 +30,7 @@ wipe    = WIPE
 [Variables]
 # Section oriented announces.
 APPROVE     = release:P user:z group:z
-NEWDATE     = release:P area:z desc:z
+NEWDATE     = release:P area:z description:z
 NUKE        = release:P user:z group:z multi:n reason:z files:n size:k disks:n {nukees:z NUKEES}
 UNNUKE      = release:P user:z group:z multi:n reason:z files:n size:k disks:n {nukees:z NUKEES}
 NUKEES      = user:z group:z credits:k stats:k
